--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -6,6 +6,9 @@ vich_uploader:
            uri_prefix: '%app.path.images%/products'
            namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
            upload_destination: '%kernel.project_dir%/public/images/products'
+           inject_on_load: false
+           delete_on_update: true
+           delete_on_remove: true
        languages_images:
            uri_prefix: '%app.path.images%/languages'
            namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
