--- a/config/packages/fos_ckeditor.yaml
+++ b/config/packages/fos_ckeditor.yaml
@@ -4,8 +4,12 @@ twig:
     form_themes:
         - '@FOSCKEditor/Form/ckeditor_widget.html.twig'
 
-# fos_ck_editor:
-#     configs:
-#         my_config_1:
-#             toolbar:
-#                 - { name: "styles", items: ['Scayt', '-', 'Bold', 'Italic', 'Underline', 'Blockquote', '-', 'Link', '-', 'NumberedList', 'BulletedList', '-', 'Outdent', 'Indent', '-', 'JustifyLeft', 'JustifyCenter', 'JustifyRight', 'JustifyBlock', '-', 'Image', 'Video', 'Table', '-', 'Styles', 'Format', 'Font', 'FontSize', '-', 'TextColor', 'BGColor'] }
+fos_ck_editor:
+    configs:
+        main_config:
+            toolbar:
+                - { name: "styles", items: ['Scayt', '-', 'Bold', 'Italic', 'Underline', 'Blockquote', '-', 'Link', '-', 'NumberedList', 'BulletedList', '-', 'Outdent', 'Indent', '-', 'JustifyLeft', 'JustifyCenter', 'JustifyRight', 'JustifyBlock', '-', 'Image', 'Video', 'Table', '-', 'Styles', 'Format', 'Font', 'FontSize', '-', 'TextColor', 'BGColor'] }
+            filebrowserBrowseRoute: elfinder
+            filebrowserBrowseRouteParameters: []
+            # filebrowserImageBrowseRoute: elfinder
+            # filebrowserImageBrowseRouteParameters: []
