--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -35,4 +35,6 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/efconnect, role: ROLE_ADMIN }
+        - { path: ^/elfinder, role: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
