--- a/config/services.yaml
+++ b/config/services.yaml
@@ -26,3 +26,7 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    form.type.datalist_type:
+        class: App\Form\Type\DatalistType
+        tags:
+            -  { name: form.type, alias: datalist }
