--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -12,4 +12,9 @@ vich_uploader:
        languages_images:
            uri_prefix: '%app.path.images%/languages'
            namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
-           upload_destination: '%kernel.project_dir%/public/images/languages'           
+           upload_destination: '%kernel.project_dir%/public/images/languages'     
+       people_images:
+           uri_prefix: '%app.path.images%/people'
+           namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
+           upload_destination: '%kernel.project_dir%/public/images/people' 
+                 
