entités people et éclaireurs; crud sur ses entités

--- a/config/packages/fos_ckeditor.yaml
+++ b/config/packages/fos_ckeditor.yaml
@@ -8,7 +8,7 @@ fos_ck_editor:
     configs:
         main_config:
             toolbar:
-                - { name: "styles", items: ['Scayt', '-', 'Bold', 'Italic', 'Underline', 'Blockquote', '-', 'Link', '-', 'NumberedList', 'BulletedList', '-', 'Outdent', 'Indent', '-', 'JustifyLeft', 'JustifyCenter', 'JustifyRight', 'JustifyBlock', '-', 'Image', 'Video', 'Table', '-', 'Styles', 'Format', 'Font', 'FontSize', '-', 'TextColor', 'BGColor'] }
+                - { name: "styles", items: ['Source','Scayt', '-', 'Bold', 'Italic', 'Underline', 'Blockquote', '-', 'Link', '-', 'NumberedList', 'BulletedList', '-', 'Outdent', 'Indent', '-', 'JustifyLeft', 'JustifyCenter', 'JustifyRight', 'JustifyBlock', '-', 'Image', 'Video', 'Table', '-', 'Styles', 'Format', 'Font', 'FontSize', '-', 'TextColor', 'BGColor'] }
             filebrowserBrowseRoute: elfinder
             filebrowserBrowseRouteParameters: []
             # filebrowserImageBrowseRoute: elfinder
