--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -30,3 +30,10 @@ vich_uploader:
             inject_on_load: false
             delete_on_update: true
             delete_on_remove: true
+        icones_images:
+            uri_prefix: '%app.path.images%/icones'
+            namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
+            upload_destination: '%kernel.project_dir%/public/images/icones'
+            inject_on_load: false
+            delete_on_update: true
+            delete_on_remove: true
