Modif activation boutton scroll; proportion image header;

--- a/config/packages/liip_imagine.yaml
+++ b/config/packages/liip_imagine.yaml
@@ -10,10 +10,20 @@ liip_imagine:
     filter_sets:
         cache: ~
 
+        newsletter:
+            quality: 70
+            filters:
+                thumbnail: { size: [80, 90] }
+
+        flag:
+            quality: 70
+            filters:
+                thumbnail: { size: [40, 40] }
+
         mini:
             quality: 70
             filters:
-                thumbnail: { size: [110, 100] }
+                thumbnail: { size: [80, 80] }
 
         miniatures:
             quality: 70
