--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 
 ###> symfony/framework-bundle ###
+.env
 /.env.local
 /.env.local.php
 /.env.*.local
@@ -17,5 +18,6 @@
 
 ###> liip/imagine-bundle ###
 /public/media/cache/
+/public/images/
 ###< liip/imagine-bundle ###
 # /public/images/products
